// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Markdown> including a <Text> property 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={false}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={false}
    level={1}
    secondary={true}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    Hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={false}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={Object {}}
    level={1}
    secondary={true}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    World 
  </Text>
</View>
`;

exports[`<Markdown> renders 1`] = `
<View
  style={Array []}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  />
</View>
`;

exports[`<Markdown> when combining * & ** 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={false}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={false}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={Object {}}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    world, I'm 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={Object {}}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    javi. 
  </Text>
</View>
`;

exports[`<Markdown> when including * 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={false}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={false}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={Object {}}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    world 
  </Text>
</View>
`;

exports[`<Markdown> when including ** 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={false}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    bold={Object {}}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    italic={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    world 
  </Text>
</View>
`;

exports[`<Markdown> when simple text 1`] = `
<View
  style={Array []}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    Hello World
  </Text>
</View>
`;
